--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vercel": "^34.2.3",
+    "wrangler": "^3.57.2"
   }
 }
