--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -22,7 +22,7 @@ jobs:
         with:
           version: latest
 
-      - run: Run database migrations
+      - run: supabase link --project-ref eguvpniwccihqtbvjovk
       - run: supabase db push
 
   publish:
