--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -22,7 +22,7 @@ jobs:
         with:
           version: latest
 
-      - run: supabase link --project eguvpniwccihqtbvjovk
+      - run: supabase link --project $SUPABASE_PROJECT_ID
       - run: supabase db push
 
   publish:
