--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -25,6 +25,12 @@ jobs:
       - run: supabase link --project-ref $SUPABASE_PROJECT_ID
       - run: supabase db push
 
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build project
+        run: npx @cloudflare/next-on-pages@1
+
   publish:
     runs-on: ubuntu-latest
     permissions:
