--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
+      # Cache npm dependencies
+      - uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+           ${{ runner.os }}-npm-
+            
       # Set up Supabase CLI
       - uses: supabase/setup-cli@v1
         with:
