--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
       # Verify generated types are checked in
       - name: Verify generated types are checked in
         run: |
-          supabase gen types typescript --local -o types/database.types.ts
+          supabase gen types typescript --local --output types/database.types.ts
           if ! git diff --ignore-space-at-eol --exit-code --quiet types.gen.ts; then
             echo "Detected uncommitted changes after build. See status below:"
             git diff
