--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -7,7 +7,21 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20.x.x
+          cache: npm
+      - run: npm ci
+      - run: npm run lint
+      - run: npm run lint:types
+      # - run: npm run test
+
+  deploy_db:
+    needs: lint
     runs-on: ubuntu-latest
 
     env:
@@ -24,6 +38,17 @@ jobs:
 
       - run: supabase link --project-ref $SUPABASE_PROJECT_ID
       - run: supabase db push
+
+  stop_cloudflare_deployment:
+    needs: lint
+    runs-on: ubuntu-latest
+    steps:
+       - run: |
+          curl -X PUT "https://api.cloudflare.com/client/v4/zones/${{ secrets.CLOUDFLARE_ZONE_ID }}/pause" \
+            -H "Authorization: Bearer ${{ secrets.CLOUDFLARE_API_KEY }}" \
+            -H "Content-Type: application/json" \
+            --data '{"paused":true}'
+
 
       # - name: Install dependencies
       #   run: npm install
