--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "pages:build": "npx @cloudflare/next-on-pages",
     "lint": "next lint",
-    "pages:build": "npx @cloudflare/next-on-pages"
+    "lint:types": "tsc -noEmit",
+    "test": "jest",
+    "test:e2e": "playwright test",
+    "prettier": "prettier -w ."
   },
   "dependencies": {
     "@supabase/ssr": "^0.3.0",
@@ -21,9 +25,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
+    "prettier": "^3.3.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "vercel": "^34.2.3",
