--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -23,6 +23,7 @@ jobs:
   deploy_db:
     needs: lint
     runs-on: ubuntu-latest
+    if: ${{ needs.lint.result != 'success' }} 
 
     env:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
@@ -39,15 +40,18 @@ jobs:
       - run: supabase link --project-ref $SUPABASE_PROJECT_ID
       - run: supabase db push
 
-  stop_cloudflare_deployment:
+  stop_cloudflare_deploy:
     needs: lint
     runs-on: ubuntu-latest
+    if: ${{ needs.lint.result != 'success' }} 
+
     steps:
-       - run: |
+      - run: |
           curl -X PUT "https://api.cloudflare.com/client/v4/zones/${{ secrets.CLOUDFLARE_ZONE_ID }}/pause" \
             -H "Authorization: Bearer ${{ secrets.CLOUDFLARE_API_KEY }}" \
             -H "Content-Type: application/json" \
             --data '{"paused":true}'
+
 
 
       # - name: Install dependencies
