--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -18,11 +18,13 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: npm run lint:types
+      - run: exit 1 
+      - run: "Lint result: ${{ job.status }}" 
 
   deploy_db:
     needs: lint
     runs-on: ubuntu-latest
-    if: ${{ needs.lint.result == 'success' }}  # Убедитесь, что это условие проверяет статус успешно выполненной задачи
+    if: ${{ needs.lint.result == 'success' }} 
 
     env:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
@@ -40,7 +42,7 @@ jobs:
   stop_cloudflare_deploy:
     needs: lint
     runs-on: ubuntu-latest
-    if: ${{ needs.lint.result != 'success' }}  # Убедитесь, что это условие проверяет статус неуспешной задачи
+    if: ${{ needs.lint.result != 'success' }}  
 
     steps:
       - run: |
