--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -44,17 +44,17 @@ jobs:
       - run: supabase link --project-ref $SUPABASE_PROJECT_ID
       - run: supabase db push
 
-  stop_cloudflare_deploy:
-    needs: lint
-    runs-on: ubuntu-latest
+  # stop_cloudflare_deploy:
+  #   needs: lint
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - run: |
-          echo "Stopping Cloudflare deploy due to lint failure"
-          curl -X PUT "https://api.cloudflare.com/client/v4/zones/febebcd3cb65b8e6448eab269871e344/pause" \
-            -H "Authorization: Bearer YrTwqdMNCJ3DmBEcX9wB_xwLzGnvJOdMomea5vrx" \
-            -H "Content-Type: application/json" \
-            --data '{"paused":true}'
+  #   steps:
+  #     - run: |
+  #         echo "Stopping Cloudflare deploy due to lint failure"
+  #         curl -X PUT "https://api.cloudflare.com/client/v4/zones/febebcd3cb65b8e6448eab269871e344/pause" \
+  #           -H "Authorization: Bearer YrTwqdMNCJ3DmBEcX9wB_xwLzGnvJOdMomea5vrx" \
+  #           -H "Content-Type: application/json" \
+  #           --data '{"paused":true}'
 
       # - name: Install dependencies
       #   run: npm install
@@ -62,23 +62,23 @@ jobs:
       # - name: Build project
       #   run: npx @cloudflare/next-on-pages@1
 
-  # publish:
-  #   runs-on: ubuntu-latest
-  #   permissions:
-  #     contents: read
-  #     deployments: write
-  #   name: Publish to Cloudflare Pages
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
+  publish:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      deployments: write
+    name: Publish to Cloudflare Pages
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-  #     # Run a build step here if your project requires
+      # Run a build step here if your project requires
 
-  #     - name: Publish to Cloudflare Pages
-  #       uses: cloudflare/pages-action@1
-  #       with:
-  #         apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-  #         accountId: 2fe55ec2924319fd78ffefd0e3d213ff
-  #         projectName: test
-  #         directory: /
-  #         gitHubToken: ${{ secrets.CLOUDFLARE_PAGES_GITHUB_TOKEN }}
+      - name: Publish to Cloudflare Pages
+        uses: cloudflare/pages-action@1
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: 2fe55ec2924319fd78ffefd0e3d213ff
+          projectName: test
+          directory: /
+          gitHubToken: ${{ secrets.CLOUDFLARE_PAGES_GITHUB_TOKEN }}
