--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -62,23 +62,22 @@ jobs:
       # - name: Build project
       #   run: npx @cloudflare/next-on-pages@1
 
-  publish:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      deployments: write
-    name: Publish to Cloudflare Pages
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      # Run a build step here if your project requires
-
-      - name: Publish to Cloudflare Pages
-        uses: cloudflare/pages-action@1
-        with:
-          apiToken: W0HgGrtJ1uSFn11J3dr5vS0uALXLuO5fzlHqWerd
-          accountId: 2fe55ec2924319fd78ffefd0e3d213ff
-          projectName: test
-          directory: /.vercel/output/static
-          gitHubToken: ${{ secrets.CLOUDFLARE_PAGES_GITHUB_TOKEN }}
+  deploy:
+        runs-on: ubuntu-latest
+        permissions:
+          contents: read
+          deployments: write
+        name: Deploy to Cloudflare Pages
+        steps:
+          - name: Checkout
+            uses: actions/checkout@v3
+          - name: Build
+            run: npx @cloudflare/next-on-pages@1  # Замените эту команду на вашу команду сборки, если она отличается
+          - name: Publish
+            uses: cloudflare/pages-action@v1
+            with:
+                apiToken: W0HgGrtJ1uSFn11J3dr5vS0uALXLuO5fzlHqWerd
+                accountId: 2fe55ec2924319fd78ffefd0e3d213ff
+                projectName: test
+                directory: /
+                gitHubToken: ${{ secrets.CLOUDFLARE_PAGES_GITHUB_TOKEN }}
