--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -18,6 +18,7 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: npm run lint:types
+      - run: exit 1 
 
   check_lint_result:
     needs: lint
