--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -51,7 +51,7 @@ jobs:
       
         steps:
           - name: Stop Cloudflare Deploy on Lint Failure
-            if: failure()
+            if: ${{ needs.lint.result != 'success' }}
             run: |
               curl -X PATCH "https://api.cloudflare.com/client/v4/accounts/2fe55ec2924319fd78ffefd0e3d213ff/pages/projects/test" \
                 -H "Authorization: Bearer ${{ secrets.CLOUDFLARE_API_TOKEN }}" \
