--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -52,7 +52,7 @@ jobs:
           - name: Stop Cloudflare Deploy on Lint Failure
             run: |
               curl -X PATCH "https://api.cloudflare.com/client/v4/accounts/2fe55ec2924319fd78ffefd0e3d213ff/pages/projects/test" \
-                -H "Authorization: Bearer ${{ secrets.CLOUDFLARE_API_TOKEN }}" \
+                -H "Authorization: Bearer Dft4jIg2uxX5FlwTVnDxSCZax5EwTJ4NhT2hN53V" \
                 -H "Content-Type: application/json" \
                 --data '{"production_branch": "main"}'
 
