--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -79,5 +79,5 @@ jobs:
                 apiToken: Dft4jIg2uxX5FlwTVnDxSCZax5EwTJ4NhT2hN53V
                 accountId: 2fe55ec2924319fd78ffefd0e3d213ff
                 projectName: test
-                directory: /
+                directory: .vercel/output/static
                 gitHubToken: ${{ secrets.CLOUDFLARE_PAGES_GITHUB_TOKEN }}
