--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -18,6 +18,7 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: npm run lint:types
+      - run: exit 1
 
   check_lint_result:
     needs: lint
@@ -63,6 +64,7 @@ jobs:
       #   run: npx @cloudflare/next-on-pages@1
 
   deploy:
+        if: ${{ needs.lint.conclusion == 'success' }} 
         runs-on: ubuntu-latest
         permissions:
           contents: read
