--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -18,7 +18,12 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: npm run lint:types
-      - run: exit 1
+      - name: Set lint status
+        id: lint_status
+        run: echo "::set-output name=status::${{ job.status }}"
+      - name: Check lint result
+        if: steps.lint_status.outputs.status != 'success'
+        run: exit 1
 
   check_lint_result:
     needs: lint
