--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -18,12 +18,12 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: npm run lint:types
-      - name: Set lint status
-        id: lint_status
-        run: echo "::set-output name=status::${{ job.status }}"
-      - name: Check lint result
-        if: steps.lint_status.outputs.status != 'success'
-        run: exit 1
+      # - name: Set lint status
+      #   id: lint_status
+      #   run: echo "::set-output name=status::${{ job.status }}"
+      # - name: Check lint result
+      #   if: steps.lint_status.outputs.status != 'success'
+      - run: exit 1
 
   check_lint_result:
     needs: lint
@@ -69,6 +69,7 @@ jobs:
       #   run: npx @cloudflare/next-on-pages@1
 
   deploy:
+        needs: lint
         if: ${{ needs.lint.result == 'success' }}
         runs-on: ubuntu-latest
         permissions:
