--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "prettier": "prettier -w ."
   },
   "dependencies": {
+    "@supabase-cache-helpers/postgrest-react-query": "^1.7.0",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
+    "@tanstack/react-query": "^5.40.1",
+    "@tanstack/react-query-devtools": "^5.40.1",
     "next": "14.2.3",
-    "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
