--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@tanstack/react-query": "^5.40.1",
     "@tanstack/react-query-devtools": "^5.40.1",
     "next": "14.2.3",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.11.3",
